syntax = "proto3";

option java_package = "demo.aws.core.autogen.grpc.uaa";
option java_multiple_files = true;

package product;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "common.proto";
import "master.proto";



service Uaa {
  rpc getPayloadFromToken (UAAPayloadFromTokenRequest) returns (UAAPayloadFromTokenResponse);
}

message UAAPayloadFromTokenRequest {
  string tokenId = 1;
  string token = 2;
}

message UAAPayloadFromTokenResponse {
  int64 userId = 1;
  string loginId = 2;
  repeated string roleNames = 3;
}
